--- a/Binary Tree Notebook.ipynb
+++ b/Binary Tree Notebook.ipynb
@@ -337,21 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ae42c928",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Node:\n",
-    "    def __init__(self, item=None, left_pointer=None, right_pointer=None):\n",
-    "        self.item = item\n",
-    "        self.left_pointer = left_pointer\n",
-    "        self.right_pointer = right_pointer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "884b5b4b",
    "metadata": {},
    "outputs": [],
@@ -376,84 +362,71 @@
     "    global root_pointer, next_free_pointer\n",
     "    if next_free_pointer == null_pointer:\n",
     "        print(\"No nodes free\")\n",
-    "        return\n",
-    "    item_add_pointer = next_free_pointer\n",
-    "    next_free_pointer = my_tree[next_free_pointer].left_pointer\n",
-    "    item_pointer = root_pointer\n",
-    "    if item_pointer == null_pointer:\n",
-    "        root_pointer = item_add_pointer\n",
     "    else:\n",
-    "        while item_pointer != null_pointer:\n",
-    "            old_pointer = item_pointer\n",
-    "            if my_tree[item_pointer].item > item_add:\n",
-    "                left_branch = True\n",
-    "                item_pointer = my_tree[item_pointer].left_pointer\n",
-    "            else:\n",
-    "                left_branch = False\n",
-    "                item_pointer = my_tree[item_pointer].right_pointer\n",
-    "        if left_branch:\n",
-    "            my_tree[old_pointer].left_pointer = item_add_pointer\n",
+    "        item_add_pointer = next_free_pointer\n",
+    "        next_free_pointer = my_tree[next_free_pointer].left_pointer\n",
+    "        item_pointer = root_pointer\n",
+    "        if item_pointer == null_pointer:\n",
+    "            root_pointer = item_add_pointer\n",
     "        else:\n",
-    "            my_tree[old_pointer].right_pointer = item_add_pointer\n",
+    "            while item_pointer != null_pointer:\n",
+    "                old_pointer = item_pointer\n",
+    "                if my_tree[item_pointer].item > item_add:\n",
+    "                    left_branch = True\n",
+    "                    item_pointer = my_tree[item_pointer].left_pointer\n",
+    "                else:\n",
+    "                    left_branch = False\n",
+    "                    item_pointer = my_tree[item_pointer].right_pointer\n",
+    "            if left_branch:\n",
+    "                my_tree[old_pointer].left_pointer = item_add_pointer\n",
+    "            else:\n",
+    "                my_tree[old_pointer].right_pointer = item_add_pointer\n",
     "    my_tree[item_add_pointer].left_pointer = null_pointer\n",
     "    my_tree[item_add_pointer].right_pointer = null_pointer\n",
     "    my_tree[item_add_pointer].item = item_add\n",
     "\n",
     "\n",
-    "# Example usage\n",
-    "node_add()\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7890ad92",
+   "execution_count": 10,
+   "id": "ba26345b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dummy(radius, pi=None):\n",
-    "    if pi != None:\n",
-    "        return pi *radius**2\n",
-    "    else:\n",
-    "        return None"
+    "node_add(12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "8c801b80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dummy(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "4e51837d",
+   "execution_count": 11,
+   "id": "a6ca2fc4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not NoneType",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m node_add(\u001b[38;5;241m13\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[9], line 7\u001b[0m, in \u001b[0;36mnode_add\u001b[1;34m(item_add)\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m      6\u001b[0m     item_add_pointer \u001b[38;5;241m=\u001b[39m next_free_pointer\n\u001b[1;32m----> 7\u001b[0m     next_free_pointer \u001b[38;5;241m=\u001b[39m my_tree[next_free_pointer]\u001b[38;5;241m.\u001b[39mleft_pointer\n\u001b[0;32m      8\u001b[0m     item_pointer \u001b[38;5;241m=\u001b[39m root_pointer\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m item_pointer \u001b[38;5;241m==\u001b[39m null_pointer:\n",
+      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not NoneType"
+     ]
     }
    ],
    "source": [
-    "node_add()"
+    "node_add(13)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19524f9e",
+   "id": "026435a1",
    "metadata": {},
    "outputs": [],
    "source": []
