--- a/Binary Trees Notebook.ipynb
+++ b/Binary Trees Notebook.ipynb
@@ -39,8 +39,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "88752f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Node' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m null_pointer \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Initialize tree and pointers\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m my_tree \u001b[38;5;241m=\u001b[39m [Node(\u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m12\u001b[39m)]\n\u001b[0;32m      6\u001b[0m root_pointer \u001b[38;5;241m=\u001b[39m null_pointer\n\u001b[0;32m      7\u001b[0m next_free_pointer \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m      2\u001b[0m null_pointer \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Initialize tree and pointers\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m my_tree \u001b[38;5;241m=\u001b[39m [Node(\u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m12\u001b[39m)]\n\u001b[0;32m      6\u001b[0m root_pointer \u001b[38;5;241m=\u001b[39m null_pointer\n\u001b[0;32m      7\u001b[0m next_free_pointer \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Node' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Constants\n",
+    "null_pointer = -1\n",
+    "\n",
+    "# Initialize tree and pointers\n",
+    "my_tree = [Node(None) for i in range(12)]\n",
+    "root_pointer = null_pointer\n",
+    "next_free_pointer = 0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87859741",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -48,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87859741",
+   "id": "09902377",
    "metadata": {},
    "outputs": [],
    "source": []
